--- a/DoctorsAppointment.ipynb
+++ b/DoctorsAppointment.ipynb
@@ -2502,7 +2502,9 @@
     "- Consider gender more in future analyses. Gender had slight logistic regression importance, random forest feature importance, and permutation importance.\n",
     "\n",
     "\n",
-    "- Procure a \"no-show\" analysis based on neighborhood. Some neighborhoods may have stronger correlations with \"no-shows\" than others."
+    "- Procure a \"no-show\" analysis based on neighborhood. Some neighborhoods may have stronger correlations with \"no-shows\" than others.\n",
+    "\n",
+    "- Locate and utilize data on what kind of medicine each doctor's office specializes in. A doctor's office specialization could provide interesting information and possible trends for no-show appointments."
    ]
   }
  ],
