rewrote section of data preparation

--- a/DoctorsAppointment.ipynb
+++ b/DoctorsAppointment.ipynb
@@ -1140,7 +1140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I created a new dataframe to contain all the columns I am going to use in my analyses and looked at the data types of each column. "
+    "I created a new dataframe to contain all the columns applicable to my project analyses and looked at the data types of each column. "
    ]
   },
   {
@@ -1412,7 +1412,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
